--- a/Analysis_of_Football_Events.ipynb
+++ b/Analysis_of_Football_Events.ipynb
@@ -21,8 +21,8 @@
    "outputs": [],
    "source": [
     "# Reading in the data\n",
-    "events = pd.read_csv(\"events.csv\")\n",
-    "matches = pd.read_csv(\"ginf.csv\")"
+    "events = pd.read_csv(\"data/events.csv\")\n",
+    "matches = pd.read_csv(\"data/ginf.csv\")"
    ]
   },
   {
